--- a/src/app/apartments/apartment-add-modal/apartment-add-modal.component.html
+++ b/src/app/apartments/apartment-add-modal/apartment-add-modal.component.html
@@ -7,9 +7,9 @@
 <form [formGroup]="formSettings" (ngSubmit)="submitForm()">
   <div class="modal-body">
     <div class="form-group row">
-      <label for="addressNo" class="col-sm-2 col-form-label">Apartment Number</label>
+      <label for="apartmentName" class="col-sm-2 col-form-label">Apartment Name</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" formControlName="addressNo" id="addressNo">
+        <input type="text" class="form-control" formControlName="apartmentName" id="apartmentName">
       </div>
     </div>
     <div class="form-group row">
@@ -22,6 +22,12 @@
       <label for="addressStreet" class="col-sm-2 col-form-label">Street</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" formControlName="addressStreet" id="addressStreet">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="addressNo" class="col-sm-2 col-form-label">Apartment Number</label>
+      <div class="col-sm-10">
+        <input type="number" class="form-control" formControlName="addressNo" id="addressNo">
       </div>
     </div>
     <div class="form-group row">
