--- a/src/app/apartments/apartments-details/apartments-details.component.html
+++ b/src/app/apartments/apartments-details/apartments-details.component.html
@@ -1,28 +1,36 @@
-<!--
-<div class="container">
-  <table mdbTable #tableEl="mdbTable" class="z-depth-1">
-    <thead>
-    <tr>
-      <th *ngFor="let head of headElements; let i = index" scope="col">{{head}}
-      </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let el of elements; let i = index">
-      <th *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex"
-          scope="row">{{el.id}}</th>
-      <td *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex">{{el.first}}</td>
-      <td *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex">{{el.last}}</td>
-      <td *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex">{{el.handle}}</td>
-    </tr>
-    </tbody>
-    <tfoot class="grey lighten-5 w-100">
-    <tr>
-      <td colspan="4">
-        <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="elements"></mdb-table-pagination>
-      </td>
-    </tr>
-    </tfoot>
-  </table>
+<h2>Apartment information</h2>
+<div *ngIf="apartment | async as apartment">
+<form>
+    <div class="form-group row">
+      <label for="apartmentName" class="col-sm-2 col-form-label">Apartment Name</label>
+      <div class="col-sm-10">
+        <input type="text" [(ngModel)]="apartment.name" class="form-control" name="apartmentName" id="apartmentName">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="addressCity" class="col-sm-2 col-form-label">City</label>
+      <div class="col-sm-10">
+        <input type="text" [(ngModel)]="apartment.address.city" class="form-control" name="addressCity" id="addressCity">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="addressStreet" class="col-sm-2 col-form-label">Street</label>
+      <div class="col-sm-10">
+        <input type="text" [(ngModel)]="apartment.address.street" class="form-control" name="addressStreet" id="addressStreet">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="addressNo" class="col-sm-2 col-form-label">Apartment Number</label>
+      <div class="col-sm-10">
+        <input type="number" [(ngModel)]="apartment.address.appartmentNumber" class="form-control" name="addressNo" id="addressNo">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="apartmentSize" class="col-sm-2 col-form-label">Apartment Size</label>
+      <div class="col-sm-10">
+        <input type="number" [(ngModel)]="apartment.size" class="form-control" name="apartmentSize" id="apartmentSize">
+      </div>
+    </div>
+    <button type="button" class="btn btn-primary" (click)="save(apartment)">Save</button>
+</form>
 </div>
--->
