--- a/src/app/apartments/apartment-add-modal/apartment-add-modal.component.html
+++ b/src/app/apartments/apartment-add-modal/apartment-add-modal.component.html
@@ -6,38 +6,25 @@
 </div>
 <form [formGroup]="formSettings" (ngSubmit)="submitForm()">
   <div class="modal-body">
-    <div class="form-group row">
-      <label for="apartmentName" class="col-sm-2 col-form-label">Apartment Name</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" formControlName="apartmentName" id="apartmentName">
-      </div>
+    <form-row forInput="appartmentName" label="Apartment Name" [isInvalid]="submitted && f.name.invalid" errorText="Name is invalid">
+      <input type="text" class="form-control" formControlName="name" id="apartmentName" [ngClass]="{'is-invalid': submitted && f.name.invalid}">
+    </form-row>
+    <div class="address-group" formGroupName="address">
+      <form-row forInput="addressCity" label="City" [isInvalid]="submitted && f.address.controls.city.invalid" errorText="City is invalid">
+        <input type="text" class="form-control" formControlName="city" id="addressCity" [ngClass]="{'is-invalid': submitted && f.address.controls.city.invalid}">
+      </form-row>
+      <form-row forInput="addressStreet" label="Street" [isInvalid]="submitted && f.address.controls.street.invalid" errorText="Street is invalid">
+        <input type="text" class="form-control" formControlName="street" id="addressStreet" [ngClass]="{'is-invalid': submitted && f.address.controls.street.invalid}">
+      </form-row>
+      <form-row forInput="appartmentNumber" label="Apartment Number" [isInvalid]="submitted && f.address.controls.appartmentNumber.invalid" errorText="Apartment no. is invalid">
+        <input type="text" class="form-control" formControlName="appartmentNumber" id="addressNo" [ngClass]="{'is-invalid': submitted && f.address.controls.appartmentNumber.invalid}">
+      </form-row>
     </div>
-    <div class="form-group row">
-      <label for="addressCity" class="col-sm-2 col-form-label">City</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" formControlName="addressCity" id="addressCity">
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="addressStreet" class="col-sm-2 col-form-label">Street</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" formControlName="addressStreet" id="addressStreet">
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="addressNo" class="col-sm-2 col-form-label">Apartment Number</label>
-      <div class="col-sm-10">
-        <input type="number" class="form-control" formControlName="addressNo" id="addressNo">
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="apartmentSize" class="col-sm-2 col-form-label">Apartment Size</label>
-      <div class="col-sm-10">
-        <input type="number" class="form-control" formControlName="apartmentSize" id="apartmentSize">
-      </div>
-    </div>
+    <form-row forInput="apartmentSize" label="Apartment Size" [isInvalid]="submitted && f.size.invalid" errorText="Size is invalid">
+      <input type="number" class="form-control" formControlName="size" id="apartmentSize" [ngClass]="{'is-invalid': submitted && f.size.invalid}">
+    </form-row>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-success" [disabled]="!formSettings.valid">Add</button>
+    <btn-primary label="Add"></btn-primary>
   </div>
 </form>
