--- a/src/app/users/user-list/user-list.component.scss
+++ b/src/app/users/user-list/user-list.component.scss
@@ -21,3 +21,8 @@ a {
   0% {transform: scale(0.5)}
   100% {transform: scale(1)}
 }
+
+table.table thead th {
+  white-space: nowrap !important;
+  overflow:hidden !important;
+}
