Added reset and change password

--- a/src/app/users/user-update/user-update.component.html
+++ b/src/app/users/user-update/user-update.component.html
@@ -19,6 +19,6 @@
       </form-row>
     </div>
     <div class="modal-footer">
-      <btn-primary label="Add"></btn-primary>
+      <btn-primary label="Save"></btn-primary>
     </div>
   </form>
