--- a/src/app/authentication/password-reset/password-reset.component.html
+++ b/src/app/authentication/password-reset/password-reset.component.html
@@ -1,16 +1,14 @@
 <div class="modal-header">
-    <h4 class="modal-title">Enter email address</h4>
-    <button type="button" class="close" (click)="activeModal.dismiss('Closed Modal')" aria-label="close">
-      <span aria-hidden="true">&times;</span>
-    </button>
+  <h4 class="modal-title">Enter email address</h4>
+  <modal-btn-close (click)="activeModal.dismiss('Closed Modal')"></modal-btn-close>
+</div>
+<form [formGroup]="formSettings" (ngSubmit)="submitForm()">
+  <div class="modal-body">
+    <form-row forInput="email" label="Email address" [isInvalid]="submitted && f.email.invalid" errorText="Email address is invalid">
+      <input type="email" class="form-control" formControlName="email" id="email" [ngClass]="{'is-invalid': submitted && f.email.invalid}">
+    </form-row>
   </div>
-  <form [formGroup]="formSettings" (ngSubmit)="submitForm()">
-    <div class="modal-body">
-      <form-row forInput="email" label="Email address" [isInvalid]="submitted && f.email.invalid" errorText="Email address is invalid">
-        <input type="email" class="form-control" formControlName="email" id="email" [ngClass]="{'is-invalid': submitted && f.email.invalid}">
-      </form-row>
-    </div>
-    <div class="modal-footer">
-      <btn-primary label="Send"></btn-primary>
-    </div>
-  </form>
+  <div class="modal-footer">
+    <btn-primary label="Send"></btn-primary>
+  </div>
+</form>
