--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -33,5 +33,5 @@
     </tfoot>
   </table>
 </div>
-<button type="button" class="btn btn-primary" (click)="addUser()">Add new user</button>
+<btn-primary (click)="addUser()" label="Add new user"></btn-primary>
 
