--- a/src/app/users/user-update/user-update.component.html
+++ b/src/app/users/user-update/user-update.component.html
@@ -4,13 +4,13 @@
 </div>
 <form [formGroup]="formSettings" (ngSubmit)="submitForm()">
   <div class="modal-body">
-    <form-row forInput="name" label="Name" [isInvalid]="submitted && f.name.invalid" errorText="Name is invalid">
+    <form-row forInput="name" label="First Name" [isInvalid]="submitted && f.name.invalid" errorText="First Name is required">
       <input type="text" class="form-control" formControlName="name" id="name" [ngClass]="{'is-invalid': submitted && f.name.invalid}">
     </form-row>
-    <form-row forInput="surname" label="Surname" [isInvalid]="submitted && f.surname.invalid" errorText="Surname is invalid">
+    <form-row forInput="surname" label="Last Name" [isInvalid]="submitted && f.surname.invalid" errorText="Last Name is required">
       <input type="text" class="form-control" formControlName="surname" id="surname" [ngClass]="{'is-invalid': submitted && f.surname.invalid}">
     </form-row>
-    <form-row forInput="role" label="User role" [isInvalid]="submitted && f.role.invalid" errorText="User role is invalid">
+    <form-row forInput="role" label="User Role" [isInvalid]="submitted && f.role.invalid" errorText="User Role is required">
       <select class="form-control" formControlName="role" id="role" [ngClass]="{'is-invalid': submitted && f.role.invalid}">
         <option [value]="userRole" *ngFor="let userRole of userRoles">{{userRole}}</option>
       </select>
