added user role enum

--- a/src/app/users/user-list/user-list.component.scss
+++ b/src/app/users/user-list/user-list.component.scss
@@ -26,3 +26,8 @@ table.table thead th {
   white-space: nowrap !important;
   overflow:hidden !important;
 }
+
+table.table td {
+  white-space: nowrap !important;
+  overflow:hidden !important;
+}
