--- a/src/app/apartments/apartments-list/apartments-list.component.html
+++ b/src/app/apartments/apartments-list/apartments-list.component.html
@@ -30,11 +30,11 @@
     </tbody>
     <tfoot class="grey lighten-5 w-100">
       <tr>
-        <td colspan="8">
+        <td [colSpan]="headElements.length">
           <paginator [pageable]="pageable" (nextPageClick)="nextPage()" (previousPageClick)="previousPage()"></paginator>
         </td>
       </tr>
     </tfoot>
   </table>
 </div>
-<button type="button" class="btn btn-primary" (click)="addApartment()">Add new apartment</button>
+<btn-primary label="Add new apartment" (click)="addApartment()"></btn-primary>
