Created trip details form (not finished)

--- a/src/app/apartments/apartments-list/apartments-list.component.html
+++ b/src/app/apartments/apartments-list/apartments-list.component.html
@@ -16,7 +16,7 @@
         <td>{{el.name}}</td>
         <td>{{el.address.city}}</td>
         <td>{{el.address.street}}</td>
-        <td>{{el.address.appartmentNumber}}</td>
+        <td>{{el.address.apartmentNumber}}</td>
         <td>{{el.size}}</td>
         <td>
           <a [routerLink]="[el.id, 'details']">
