--- a/src/app/apartments/apartment-add-modal/apartment-add-modal.component.html
+++ b/src/app/apartments/apartment-add-modal/apartment-add-modal.component.html
@@ -6,7 +6,7 @@
 </div>
 <form [formGroup]="formSettings" (ngSubmit)="submitForm()">
   <div class="modal-body">
-    <form-row forInput="appartmentName" label="Apartment Name" [isInvalid]="submitted && f.name.invalid" errorText="Name is invalid">
+    <form-row forInput="apartmentName" label="Apartment Name" [isInvalid]="submitted && f.name.invalid" errorText="Name is invalid">
       <input type="text" class="form-control" formControlName="name" id="apartmentName" [ngClass]="{'is-invalid': submitted && f.name.invalid}">
     </form-row>
     <div class="address-group" formGroupName="address">
@@ -16,8 +16,8 @@
       <form-row forInput="addressStreet" label="Street" [isInvalid]="submitted && f.address.controls.street.invalid" errorText="Street is invalid">
         <input type="text" class="form-control" formControlName="street" id="addressStreet" [ngClass]="{'is-invalid': submitted && f.address.controls.street.invalid}">
       </form-row>
-      <form-row forInput="appartmentNumber" label="Apartment Number" [isInvalid]="submitted && f.address.controls.appartmentNumber.invalid" errorText="Apartment no. is invalid">
-        <input type="text" class="form-control" formControlName="appartmentNumber" id="addressNo" [ngClass]="{'is-invalid': submitted && f.address.controls.appartmentNumber.invalid}">
+      <form-row forInput="apartmentNumber" label="Apartment Number" [isInvalid]="submitted && f.address.controls.apartmentNumber.invalid" errorText="Apartment no. is invalid">
+        <input type="text" class="form-control" formControlName="apartmentNumber" id="addressNo" [ngClass]="{'is-invalid': submitted && f.address.controls.apartmentNumber.invalid}">
       </form-row>
     </div>
     <form-row forInput="apartmentSize" label="Apartment Size" [isInvalid]="submitted && f.size.invalid" errorText="Size is invalid">
