--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-dark bg-dark" style="color:white;">
-  <a class="navbar-brand" (click)="router.navigate(['/home'])" class="pointer">
-    <img class="img-responsive logo" src="https://www.vu.lt/site_images/infor/vaizdai_spaudai/Logo_vilniaus_universitetas.png">
-    PSK Vergai</a>
-  <div *ngIf="currentToken">
-    <a class="nav-item nav-link pointer" (click)="logout()">
-      <div class="material-icons">exit_to_app</div>
-      Logout
-    </a>
-  </div>
-</nav>
-
-<div class="fullheight jumbotron">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-10 offset-sm-1">
-        <alert></alert>
-        <div [@routeAnimation]="getAnimationData(routerOutlet)">
-          <router-outlet #routerOutlet="outlet"></router-outlet>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+<router-outlet></router-outlet>
