--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+.pointer {
+    cursor: pointer;
+}
+
+.jumbotron {
+    height:auto;
+    position: relative;
+    background-size: cover;
+    min-height:100vh;
+    margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
+}
