--- a/src/app/apartments/apartments-list/apartments-list.component.html
+++ b/src/app/apartments/apartments-list/apartments-list.component.html
@@ -19,7 +19,7 @@
         <td>{{el.address.apartmentNumber}}</td>
         <td>{{el.size}}</td>
         <td>
-          <a [routerLink]="[el.id, 'details']">
+          <a [routerLink]="[el.id]">
             <mat-icon style="cursor: pointer;">settings</mat-icon>
           </a>
         </td>
