--- a/src/app/core/layout-components/nav/nav.component.html
+++ b/src/app/core/layout-components/nav/nav.component.html
@@ -1,12 +1,13 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
-      [attr.role]="'navigation'"
-      [mode]="'over'"
-      [opened]="(isHandset$ | async)">
+               [attr.role]="'navigation'"
+               [mode]="'over'"
+               [opened]="(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="users">Users</a>
-      <a mat-list-item href="apartments">Apartments</a>
+      <a mat-list-item (click)="navigate('users')">Users</a>
+      <a mat-list-item (click)="navigate('apartments')">Apartments</a>
+      <a mat-list-item (click)="navigate('events')">Calendar</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -15,6 +16,7 @@
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
+        #toggler
         (click)="drawer.toggle()"
         style="color:white;">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
