--- a/src/app/authentication/password-change/password-change.component.html
+++ b/src/app/authentication/password-change/password-change.component.html
@@ -8,7 +8,7 @@
           <div class="form-group">
             <label for="password">Password</label>
             <input id="password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.invalid }" />
-            <invalid-feedback errorText="Password is required" [isInvalid]="submitted && f.password.invalid" ></invalid-feedback>
+            <invalid-feedback errorText="Password is required. Password must be longer than 8 characters and must contain only letters and numbers." [isInvalid]="submitted && f.password.invalid" ></invalid-feedback>
           </div>
           <div class="form-group">
             <btn-primary label="Save"></btn-primary>
