add trip confirmation

--- a/src/app/apartments/apartments-list/apartments-list.component.html
+++ b/src/app/apartments/apartments-list/apartments-list.component.html
@@ -37,4 +37,4 @@
     </tfoot>
   </table>
 </div>
-<btn-primary label="Add new apartment" (click)="addApartment()"></btn-primary>
+<btn-primary label="Add new apartment" (onClick)="addApartment($event)"></btn-primary>
