--- a/src/app/shared/components/btn-primary/btn-primary.component.html
+++ b/src/app/shared/components/btn-primary/btn-primary.component.html
@@ -1,1 +1,1 @@
-<button [disabled]="isDisabled" class="btn btn-primary">{{label}}</button>
+<button [disabled]="isDisabled" class="btn btn-primary" (click)="onClick()">{{label}}</button>
