--- a/src/app/shared/components/btn-secondary/btn-secondary.component.html
+++ b/src/app/shared/components/btn-secondary/btn-secondary.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-success" [disabled]="isDisabled">{{label}}</button>
+<button class="btn btn-success" [disabled]="isDisabled" (click)="onClick()">{{label}}</button>
