--- a/src/app/core/layout-components/nav/nav.component.html
+++ b/src/app/core/layout-components/nav/nav.component.html
@@ -7,7 +7,8 @@
     <mat-nav-list>
       <a mat-list-item (click)="navigate('users')" *ngIf="isAdmin">Users</a>
       <a mat-list-item (click)="navigate('apartments')" *ngIf="isAdmin">Apartments</a>
-      <a mat-list-item (click)="navigate('events')" *ngIf="isAdmin">Calendar</a>
+      <a mat-list-item (click)="navigate('events')" *ngIf="isAdmin || isOrganiser || isUser">Calendar</a>
+      <a mat-list-item (click)="navigate('trips')" *ngIf="isAdmin || isOrganiser">Trips</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -34,7 +35,7 @@
     <div class="fullheight jumbotron">
       <div class="container">
         <div class="row">
-          <div class="col-sm-10 offset-sm-1">
+          <div class="col-sm-11">
             <alert></alert>
             <router-outlet></router-outlet>
           </div>
